large-hero overflow fix

--- a/app/assets/sass/modules/_btn.css
+++ b/app/assets/sass/modules/_btn.css
@@ -17,6 +17,12 @@
 	}
 
 	
+	&--scroll:hover {
+		background-color: rgba($primaryColor, .01);
+		color:rgba($primaryColor, .01);
+	}
+
+	
 
 
 	@mixin atMedium {
