--- a/app/assets/sass/modules/_site-header.css
+++ b/app/assets/sass/modules/_site-header.css
@@ -1,5 +1,6 @@
 .site-header {
 	position: absolute;
+	overflow: hidden;
 	z-index: 1;
 	width: 100%;
 	text-align: center;
